# evolution-of-todo-app

./: README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
specs/001-todo-app-in-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app-in-memory/checklists/: requirements.md
specs/001-todo-app-in-memory/contracts/: todo_manager_contract.md
src/todo/: exceptions.py  main.py  manager.py  models.py
src/todo_app_in_memory.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_main.py  test_manager.py
